--- a/zarp/musik.html
+++ b/zarp/musik.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description"
-    content="Zar Paulo">
+  <meta name="description" content="Zar Paulo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -13,30 +12,40 @@
 <body>
   <header>
     <nav>
-			<div class="burgermenu">
-				<div class="boxa"> <label for="toggle">&#9776;</label> </div>
-				<div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div>
-			</div>
-			<input type="checkbox" id="toggle" />
-			<div class="menu">
-				<a href="index.html" title="Forside">Forside</a>
-				<a href="musik.html" title="Musik">Musik</a>
-				<a href="lyrik.html" title="Lyrik">Lyrik</a>
-				<a href="stems.html" title="Stems">Stems</a>
+      <div class="burgermenu">
+        <div class="boxa"> <label for="toggle">&#9776;</label> </div>
+        <!--  <div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div> -->
+      </div>
+      <input type="checkbox" id="toggle" />
+      <div class="menu">
+        <a href="index.html" title="Forside">Forside</a>
+        <a href="musik.html" title="Musik">Musik</a>
+        <a href="lyrik.html" title="Lyrik">Lyrik</a>
+        <a href="stems.html" title="Stems">Stems</a>
         <a href="presse.html" title="Presse">Presse</a>
         <a href="kontakt.html" title="Kontakt">Kontakt</a>
-			</div>
-		</nav>
+      </div>
+    </nav>
 
   </header>
 
   <main>
-    <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2"
-    width="300"
-    height="380"
-    frameborder="0"
-    allowtransparency="true"
-    allow="encrypted-media"></iframe>
+    <div class="youtube">
+      <h2> I Løb </h2>
+
+      <iframe height="215" class="youtube" src="https://www.youtube.com/embed/9HBC6u2AtGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
+
+    <div class="youtube">
+      <h2> Højen </h2>
+
+      <iframe height="215" class="youtube" src="https://www.youtube.com/embed/-1Ir9EnJkkw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
+    <h1> Spotify </h1>
+
+    <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2" width="100%" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </main>
   <footer>
 
