--- a/zarp/presse.html
+++ b/zarp/presse.html
@@ -15,7 +15,7 @@
     <nav>
 			<div class="burgermenu">
 				<div class="boxa"> <label for="toggle">&#9776;</label> </div>
-				<div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div>
+		  <!--  <div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div> -->
 			</div>
 			<input type="checkbox" id="toggle" />
 			<div class="menu">
