--- a/zarp/musik.html
+++ b/zarp/musik.html
@@ -14,11 +14,11 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-        <!--  <div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div> -->
+      <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com </a> </div>
+<div> <label class="boxc">&#9776;</label> </div>
       </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
-        <a href="index.html" title="Forside">Forside</a>
         <a href="musik.html" title="Musik">Musik</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
         <a href="stems.html" title="Stems">Stems</a>
@@ -31,17 +31,19 @@
 
   <main>
     <div class="youtube">
+      <div class="video">
       <h2> I Løb </h2>
 
-      <iframe height="215" class="youtube" src="https://www.youtube.com/embed/9HBC6u2AtGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      <iframe height="250px" width="75%" src="https://www.youtube.com/embed/9HBC6u2AtGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe>
     </div>
 
-    <div class="youtube">
+    <div class="video">
       <h2> Højen </h2>
 
-      <iframe height="215" class="youtube" src="https://www.youtube.com/embed/-1Ir9EnJkkw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      <iframe height="250px" width="75%" src="https://www.youtube.com/embed/-1Ir9EnJkkw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
       </iframe>
+    </div>
     </div>
     <h1> Spotify </h1>
 
