--- a/zarp/index.html
+++ b/zarp/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description"
-    content="Zar Paulo">
+  <meta name="description" content="Zar Paulo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
@@ -13,24 +12,26 @@
 <body>
   <header>
     <nav>
-			<div class="burgermenu">
-				<div class="boxa"> <label for="toggle">&#9776;</label> </div>
-			  <!--  <div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div> -->
-			</div>
-			<input type="checkbox" id="toggle" />
-			<div class="menu">
-				<a href="index.html" title="Forside">Forside</a>
-				<a href="musik.html" title="Musik">Musik</a>
-				<a href="lyrik.html" title="Lyrik">Lyrik</a>
-				<a href="stems.html" title="Stems">Stems</a>
+      <div class="burgermenu">
+        <div class="boxa"> <label for="toggle">&#9776;</label> </div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com </a> </div>
+        <div> <label class="boxc">&#9776;</label> </div>
+</div>
+      <input type="checkbox" id="toggle" />
+      <div class="menu">
+
+        <a href="musik.html" title="Musik">Musik</a>
+        <a href="lyrik.html" title="Lyrik">Lyrik</a>
+        <a href="stems.html" title="Stems">Stems</a>
         <a href="presse.html" title="Presse">Presse</a>
         <a href="kontakt.html" title="Kontakt">Kontakt</a>
-			</div>
-		</nav>
+      </div>
+    </nav>
 
   </header>
 
   <main>
+    <h1> FORSIDE </h1>
   </main>
   <footer>
 
