--- a/zarp/presse.html
+++ b/zarp/presse.html
@@ -15,11 +15,12 @@
     <nav>
 			<div class="burgermenu">
 				<div class="boxa"> <label for="toggle">&#9776;</label> </div>
-		  <!--  <div class="boxb"> <img id="logo" src="images/logo.png" alt="Zar Paulos logo"> </div> -->
-			</div>
+		 <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com </a> </div>
+<div> <label class="boxc">&#9776;</label> </div>
+  		</div>
 			<input type="checkbox" id="toggle" />
 			<div class="menu">
-				<a href="index.html" title="Forside">Forside</a>
+
 				<a href="musik.html" title="Musik">Musik</a>
 				<a href="lyrik.html" title="Lyrik">Lyrik</a>
 				<a href="stems.html" title="Stems">Stems</a>
@@ -31,6 +32,9 @@
   </header>
 
   <main>
+
+<h1> PRESSE </h1>
+
   </main>
   <footer>
 
