--- a/zarp2/musik.html
+++ b/zarp2/musik.html
@@ -14,8 +14,8 @@
     <nav>
       <div class="burgermenu">
         <div class="boxa"> <label for="toggle">&#9776;</label> </div>
-      <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com </a> </div>
-<div> <label class="boxc">&#9776;</label> </div>
+        <div class="boxb"> <a href="index.html" title="Forside" class="logo"> www.zarpaulo.com </a> </div>
+        <div> <label class="boxc">&#9776;</label> </div>
       </div>
       <input type="checkbox" id="toggle" />
       <div class="menu">
@@ -32,22 +32,22 @@
   <main>
     <div class="youtube">
       <div class="video">
-      <h2> I Løb </h2>
+        <h2> I Løb </h2>
 
-      <iframe height="250px" width="75%" src="https://www.youtube.com/embed/9HBC6u2AtGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-      </iframe>
+        <iframe height="250px" width="75%" src="https://www.youtube.com/embed/9HBC6u2AtGk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+      </div>
+
+      <div class="video">
+        <h2> Højen </h2>
+
+        <iframe height="250px" width="75%" src="https://www.youtube.com/embed/-1Ir9EnJkkw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+      </div>
     </div>
-
-    <div class="video">
-      <h2> Højen </h2>
-
-      <iframe height="250px" width="75%" src="https://www.youtube.com/embed/-1Ir9EnJkkw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-      </iframe>
-    </div>
-    </div>
-    <h1> Spotify </h1>
-
+<div class="spotify">
     <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2" width="100%" height="200" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
   </main>
   <footer>
 
