--- a/zarp2/stems.html
+++ b/zarp2/stems.html
@@ -16,7 +16,7 @@
 			<div class="burgermenu">
 				<div class="boxa"> <label for="toggle">&#9776;</label> </div>
 			 <div class="boxb"> <a href="index.html" title="Forside" class="logo" > www.zarpaulo.com </a> </div>
-<div> <label class="boxc">&#9776;</label> </div>
+<div> <img class="boxc" src="images/earth13.gif" </img>  </div>
   		</div>
 			<input type="checkbox" id="toggle" />
 			<div class="menu">
