--- a/zarp2/index.html
+++ b/zarp2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="images/blue-square-png-13" itemprop="image">
+  <link rel="shortcut icon" src="images/blue-square-png-13">
   <meta name="description" content="Zar Paulo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zar Paulo hej</title>
