--- a/zarp2/index.html
+++ b/zarp2/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
   <meta name="description" content="Zar Paulo">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zar Paulo hej</title>
+  <title>Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
