--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -47,7 +47,7 @@
     <div>
   </main>
   <footer>
-    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
+    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60" scrolldelay="60">
     ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
     ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
     ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
