--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -37,7 +37,80 @@
 
   </main>
   <footer>
-
+    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+    </marquee>
   </footer>
 </body>
 
