--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -47,80 +47,87 @@
     <div>
   </main>
   <footer>
-    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60" scrolldelay="60">
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-  </marquee>
+    <div class="marquee">
+    <div class="marquee--inner">
+        <p class="zarpaulo_scroll_start"> O ZAR PAULO ZAR PAULO
+          ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+        ZAR PAULO ZAR PAULO ZAR PAULO</p>
+</div>
+</div>
+<marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
+</marquee>
   </footer>
 </body>
 
