Bund Færdig 1024px

--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -49,7 +49,7 @@
   <footer>
     <div class="marquee">
     <div class="marquee--inner">
-        <p class="zarpaulo_scroll_start"> O ZAR PAULO ZAR PAULO
+        <p class="zarpaulo_scroll_start"> LO ZAR PAULO ZAR PAULO
           ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
         ZAR PAULO ZAR PAULO ZAR PAULO</p>
 </div>
