--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -49,9 +49,9 @@
   <footer>
     <div class="marquee">
     <div class="marquee--inner">
-        <p class="zarpaulo_scroll_start"> LO ZAR PAULO ZAR PAULO
+        <p class="zarpaulo_scroll_start"> L PAULO ZAR PAULO ZAR PAULO
           ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-        ZAR PAULO ZAR PAULO ZAR PAULO</p>
+        </p>
 </div>
 </div>
 <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
