--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -37,80 +37,74 @@
 
   </main>
   <footer>
-    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    </marquee>
+    <div class="container_footer">
+  <div class="scrolling">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+    ZAR PAULO
+  </div><div class="scrolling" aria-hidden="true">
+  </div>
+</div>
   </footer>
 </body>
 
