--- a/zarp4/stems.html
+++ b/zarp4/stems.html
@@ -37,81 +37,75 @@
 
   </main>
   <footer>
-    <marquee behavior="scroll" direction="left" class="zarpaulo_scroll" truespeed="60">
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO ZAR PAULO
-    </marquee>
+    <div class="container_footer">
+      <div class="scrolling">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+        ZAR PAULO
+      </div><div class="scrolling" aria-hidden="true">
+      </div>
+      </div>
+    </div>
   </footer>
 </body>
-
 </html>
