--- a/zarp4/musik.html
+++ b/zarp4/musik.html
@@ -33,9 +33,28 @@
 
   <main>
 
-<h1> MUSIK </h1>
+  <h1> MUSIK </h1>
+
+  <figure class="afspiller">
+      <figcaption>Lyt til vores musik:</figcaption>
+      <audio controls preload="auto">
+        <source src="musik/m3_kabine_Mads_Master_1.mp3" type="audio/mpeg">
+              Your browser does not support the
+              <code>audio</code> element.
+      </audio>
+  </figure>
+
+<div class="afspiller">
+<iframe
+frameborder="0"
+width="400"
+height="150"
+src="https://drive.google.com/file/d/1O8GVsQCHwIo30zYrLBIacRTRnR95ZJfE/preview">
+</iframe>
+</div>
 
   </main>
+
   <footer>
     <div class="container_footer">
   <div class="scrolling">
