Fucking Med Mobile og det hele

--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -25,8 +25,7 @@
 
         <a href="musik.html" title="Musik">Musik</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
-        <a href="stems.html" title="Stems">Stems</a>
-        <a href="mailto:zarpaulo@outlook.com">Kontakt</a>
+      <a href="kontakt.html" title="Kontakt">Kontakt</a>
       </div>
     </nav>
 
