--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -24,8 +24,7 @@
 
         <a href="musik.html" title="Musik">Musik</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
-        <a href="stems.html" title="Stems">Stems</a>
-        <a href="mailto:zarpaulo@outlook.com">Kontakt</a>
+        <a href="kontakt.html" title="Kontakt">Kontakt</a>
       </div>
     </nav>
 
@@ -34,6 +33,15 @@
   <main>
 
 <h1> LYRIK </h1>
+
+<div class="lyrikmenu">
+  <img class="scan1" src="images/lyrik/scan1.jpeg" </img>
+  <img class="scan2" src="images/lyrik/scan2.jpeg" </img>
+  <img class="scan3" src="images/lyrik/scan3.jpeg" </img>
+  <img class="scan4" src="images/lyrik/scan4.jpeg" </img>
+
+
+</div>
 
   </main>
   <footer>
