--- a/zarp4/musik.html
+++ b/zarp4/musik.html
@@ -24,8 +24,7 @@
 
         <a href="musik.html" title="Musik">Musik</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
-        <a href="stems.html" title="Stems">Stems</a>
-        <a href="mailto:zarpaulo@outlook.com">Kontakt</a>
+        <a href="kontakt.html" title="Kontakt">Kontakt</a>
       </div>
     </nav>
 
@@ -35,6 +34,8 @@
 
   <h1> MUSIK </h1>
 
+  <p class="spotify"> <iframe src="https://open.spotify.com/embed/artist/5Org3M2mFFEFd8A57h9Yv2" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> </p>
+<!--
   <figure class="afspiller">
       <figcaption>Lyt til vores musik:</figcaption>
       <audio controls preload="auto">
@@ -52,7 +53,7 @@ height="150"
 src="https://drive.google.com/file/d/1O8GVsQCHwIo30zYrLBIacRTRnR95ZJfE/preview">
 </iframe>
 </div>
-
+-->
   </main>
 
   <footer>
