Sidste ændringer for nu

--- a/zarp4/kontakt.html
+++ b/zarp4/kontakt.html
@@ -34,10 +34,12 @@
 
 <h1> KONTAKT </h1>
 
-<a href="mailto:zarpaulo@outlook.com" title="Lyrik">zarpaulo@outlook.com</a>
+<section class="kontaktinfo">
+<p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a> // <a href="tel:+4522583530">(+45) 22 58 35 30</a> </p>
+<p> ØVRIGE HENVENDELSER: <a href="mailto:zarpaulo@outlook.com" title="Kontakt">zarpaulo@outlook.com</a> </p>
+</section>
 
 
-<a href="mailto:andreas@theartist.eu" title="Lyrik">andreas@theartist.eu</a>
 
   </main>
   <footer>
