Nye lyrics og ændring i kontakt

--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -35,10 +35,10 @@
 <h1> LYRIK </h1>
 
 <div class="lyrikmenu">
-  <img class="scan1" src="images/lyrik/scan1.jpeg" </img>
-  <img class="scan2" src="images/lyrik/scan2.jpeg" </img>
-  <img class="scan3" src="images/lyrik/scan3.jpeg" </img>
-  <img class="scan4" src="images/lyrik/scan4.jpeg" </img>
+  <img class="scan1" src="images/lyrik/scan1.jpg" </img>
+  <img class="scan2" src="images/lyrik/scan2.jpg" </img>
+  <img class="scan3" src="images/lyrik/scan3.jpg" </img>
+  <img class="scan4" src="images/lyrik/scan4.jpg" </img>
 
 
 </div>
