--- a/zarp4/kontakt.html
+++ b/zarp4/kontakt.html
@@ -35,7 +35,7 @@
 <h1> KONTAKT </h1>
 
 <section class="kontaktinfo">
-<p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a> // <a href="tel:+4522583530">(+45) 22 58 35 30</a> </p>
+<p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
 <p> ØVRIGE HENVENDELSER: <a href="mailto:zarpaulo@outlook.com" title="Kontakt">zarpaulo@outlook.com</a> </p>
 </section>
 
