--- a/zarp4/kontakt.html
+++ b/zarp4/kontakt.html
@@ -36,7 +36,7 @@
 
 <section class="kontaktinfo">
 <p> BOOKING: Andreas Løwén // <a href="mailto:andreas@theartist.eu" title="Kontakt">andreas@theartist.eu</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
-<p> ØVRIGE HENVENDELSER: <a href="mailto:zarpaulo@outlook.com" title="Kontakt">zarpaulo@outlook.com</a> </p>
+<p> ØVRIGE HENVENDELSER: <a href="mailto:kontakt@zarpaulo.com" title="Kontakt">kontakt@zarpaulo.com</a> </p>
 </section>
 
 
