--- a/zarp4/koncerter.html
+++ b/zarp4/koncerter.html
@@ -36,8 +36,8 @@
 <h1> KONCERTER </h1>
 
 <section class="koncertliste">
-<p> D. 5 DECEMBER - TRAIN, AARHUS  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/T201205A" title="Billetter">HER.</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
-<p> D. 11 DECEMBER - PUMPEHUSET, KØBENHAVN  //  KØB BILLET <a href="https://www.billetto.dk/e/zar-paulo-billetter-486061" title="Billetter">HER.</a> </p>
+<p> D. 5 DECEMBER - TRAIN, AARHUS  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/T201205A" title="Billetter">HER</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
+<p> D. 11 DECEMBER - PUMPEHUSET, KØBENHAVN  //  KØB BILLET <a href="https://www.billetto.dk/e/zar-paulo-billetter-486061" title="Billetter">HER</a> </p>
 </section>
 
 
