SEO tilføjet, kan sagtens bare omkrives efter behov

--- a/zarp4/stems.html
+++ b/zarp4/stems.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
+  <meta name="author" content="Jonas Halborg, Tobias Schou">
   <meta name="description" content="Zar Paulo">
   <meta name="keywords" content="moodle, AAU Moodle">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
