--- a/zarp4/koncerter.html
+++ b/zarp4/koncerter.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
-  <meta name="description" content="Zar Paulo">
-  <meta name="keywords" content="moodle, AAU Moodle">
+  <meta name="author" content="Jonas Halborg, Tobias Schou">
+  <meta name="description" content="Her kan du finde tourplanen for Zar Paulos Danmarksturne, samt et link til billetter. Zar Paulo spiller koncerter i Danmark hele foråret 2021 og efteråret 2021.">
+  <meta name="keywords" content="zar paulo, Zar Paulo, zar paulo koncerts, zar paulo tickets, zar paulo koncerter, zar paulo billetter, tourplan, turne, koncerter, århus, københavn, odense, aalborg, esbjerg, herning, roskilde, upcoming, train, pumpehuset, gimle, tapperiet, walthers musikcafe, kulturmaskinen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zar Paulo</title>
+  <title>Koncerter - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
