--- a/zarp4/kontakt.html
+++ b/zarp4/kontakt.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
-  <meta name="description" content="Zar Paulo">
-  <meta name="keywords" content="moodle, AAU Moodle">
+  <meta name="author" content="Jonas Halborg, Tobias Schou">
+  <meta name="description" content="Zar Paulos Kontaktinformation. Kontakt booker Andreas Løwén for at hyre Zar Paulo til at spille koncerter. Her kan du kontakte bandet Zar Paulo direkte på email eller telefon">
+  <meta name="keywords" content="Zar Paulo, kontakt, telefon, adresse, booker, booking, andreas løwen, andreas løwén, aarhus, danmark, dansk">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zar Paulo</title>
+  <title>Kontaktinformation - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
