--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
-  <meta name="description" content="Zar Paulo">
-  <meta name="keywords" content="moodle, AAU Moodle">
+  <meta name="author" content="Jonas Halborg, Tobias Schou">
+  <meta name="description" content="Sangtekst og lyrik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
+  <meta name="keywords" content="Zar Paulo, lyrik, sangtekster zar paulo, stop believing lyrics, stop believing lyrik, højen lyrik, højen lyrics, radiotårn lyrik, radiotårn lyrics, i løb lyrik, i løb lyrics">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zar Paulo</title>
+  <title>Lyrik - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
