--- a/zarp4/musik.html
+++ b/zarp4/musik.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon" href="images/blue-square-png-13.png" sizes="32x32">
-  <meta name="description" content="Zar Paulo">
-  <meta name="keywords" content="moodle, AAU Moodle">
+  <meta name="author" content="Jonas Halborg, Tobias Schou">
+  <meta name="description" content="Spotify links til Musik fra bandet Zar Paulo, som har lavet sangene Stop Believing, Højen, Radiotårn og I løb">
+  <meta name="keywords" content="Zar Paulo, lyrik, musik zar paulo, spotify, stop believing, højen, radiotårn, i løb">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zar Paulo</title>
+  <title>Musik - Zar Paulo</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
